--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">OHO!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ft">%2d ft</string>
+    <string name="inch">%2d in</string>
+    <string name="day">%02d</string>
+    <string name="year">%2d</string>
 </resources>
