--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="day">%02d</string>
     <string name="year">%2d</string>
     <string name="select_your_prompt_question">Select your prompt question.</string>
+    <string name="caption_for_the_photo">Caption for the photo</string>
     <string-array name="education_list">
         <item>No Degree</item>
         <item>High School Diploma</item>
