--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="select_your_prompt_question">Select your prompt question.</string>
     <string name="caption_for_the_photo">Caption for the photo</string>
     <string name="please_fill_in_about_yourself">Please fill in about yourself</string>
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</string>
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur \n adipiscing elit, sed do eiusmod tempor \n incididunt ut labore et dolore magna aliqua...</string>
     <string-array name="education_list">
         <item>No Degree</item>
         <item>High School Diploma</item>
