--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,7 +289,7 @@ Oho! does not knowingly collect any Personal Identifiable Information from child
     <string name="availability_change_disclaimer">Or if your availability changes, you can select your schedule for this weekend using the below button.</string>
     <string name="availability_saved_disclaimer">Below is your schedule for this week, you can update it anytime from the <b>Availability Settings</b> menu</string>
     <string name="preference_file_key">com.oho.oho.PREFERENCE_FILE_KEY</string>
-    <string name="dating_phase_disclaimer">We don\'t show you new profiles during the <b>dating phase</b>. Please come back to this screen when the <b>matching phase</b> starts from Monday.</string>
+    <string name="dating_phase_disclaimer">Please come back on <b>Monday</b> next week when matching phase begins.</string>
     <string-array name="evening_time_slots_array">
         <item>06:00 PM</item>
         <item>07:00 PM</item>
