--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -291,6 +291,8 @@ Oho! does not knowingly collect any Personal Identifiable Information from child
     <string name="preference_file_key">com.oho.oho.PREFERENCE_FILE_KEY</string>
     <string name="dating_phase_disclaimer">Please come back on <b>Monday</b> next week when matching phase begins.</string>
     <string name="cannot_change_schedule_disclaimer">We do not allow changing schedule during the dating phase please come back on <b>Monday</b> next week when matching phase begins.</string>
+    <string name="lorem_ipsum_2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
+    <string name="dummy_height">5\'11\"</string>
     <string-array name="evening_time_slots_array">
         <item>06:00 PM</item>
         <item>07:00 PM</item>
