--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,6 +297,7 @@ Oho! does not knowingly collect any Personal Identifiable Information from child
     <string name="both">Other</string>
     <string name="male">Male</string>
     <string name="preference_settings">Preference Settings</string>
+    <string name="no_recommendations_disclaimer">Sorry couldn\'t find any recommendations for you at this moment, please widen your preferences from the preference settings then come back.</string>
     <string-array name="evening_time_slots_array">
         <item>06:00 PM</item>
         <item>07:00 PM</item>
