feat: add placeholder image and disclaimer message when no chat messages are available for user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -373,6 +373,8 @@ Oho! does not knowingly collect any Personal Identifiable Information from child
     <string name="if_i_dont_show_up_ques">What happens if I don\'t show up on my date?</string>
     <string name="is_oho_safe_ques">Is Oho! safe for me?</string>
     <string name="motivation_ques">What is our motivation for this app?</string>
+    <string name="no_messages_disclaimer">As you haven\'t matched with anyone so far, you don\'t have any messages yet.</string>
+    <string name="no_messages">No chats available!</string>
     <string-array name="evening_time_slots_array">
         <item>06:00 PM</item>
         <item>07:00 PM</item>
