--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -369,6 +369,8 @@ Oho! does not knowingly collect any Personal Identifiable Information from child
     <string name="weekly_limit_reached_disclaimer">You already have 2 dates for the weekend, come back again on next week.</string>
     <string name="deactivate_account_disclaimer">Deactivating your account will permanently delete your Oho! profile along with all your data. If confirmed then tap the button below.</string>
     <string name="deactivate_your_account">Deactivate Account</string>
+    <string name="confirm_delete">Delete Prompt Answer</string>
+    <string name="confirm_delete_disclaimer">Are you sure that you want to delete this prompt answer? If confirmed then tap the button below.</string>
     <string name="what_is_oho_ques">What is Oho!?</string>
     <string name="how_does_it_work_ques">How does it work?</string>
     <string name="if_i_dont_show_up_ques">What happens if I don\'t show up on my date?</string>
