--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,24 +10,38 @@
     <string name="caption_for_the_photo">Caption for the photo</string>
     <string name="please_fill_in_about_yourself">Please fill in about yourself</string>
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur \n adipiscing elit, sed do eiusmod tempor \n incididunt ut labore et dolore magna aliqua...</string>
+    <string-array name="distance_list">
+        <item>10 miles</item>
+        <item>20 miles</item>
+        <item>30 miles</item>
+        <item>40 miles</item>
+        <item>50 miles</item>
+    </string-array>
+    <string-array name="gender_list">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Both</item>
+    </string-array>
     <string-array name="education_list">
         <item>No Degree</item>
-        <item>High School Diploma</item>
+        <item>High School</item>
         <item>Undergrad</item>
         <item>Masters</item>
-        <item>PhD</item>
+        <item>PHD</item>
+        <item>Open to all</item>
     </string-array>
     <string-array name="ethnicity_list">
         <item>White</item>
         <item>Asian</item>
+        <item>Black</item>
+        <item>African American</item>
         <item>African</item>
         <item>American</item>
-        <item>Black</item>
         <item>Hispanic</item>
         <item>Latinx</item>
         <item>Pacific Islander</item>
         <item>American Indian</item>
-        <item>Others</item>
+        <item>Open to all</item>
     </string-array>
     <string-array name="religion_list">
         <item>Christian</item>
@@ -39,7 +53,7 @@
         <item>Agnostic</item>
         <item>Buddhist</item>
         <item>Spiritual/Not Religious</item>
-        <item>Others</item>
+        <item>Open to all</item>
     </string-array>
     <string-array name="cuisine_list">
         <item>Italian</item>
@@ -51,7 +65,6 @@
         <item>Vegetarian</item>
         <item>Vietnamese</item>
         <item>Chinese</item>
-        <item>Healthy</item>
         <item>Open to all</item>
     </string-array>
     <string-array name="quickmessage_list">
